update profile image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <div class="flex items-center justify-center">
                 <img 
                     class="rounded-full border p-5 h-28 shadow-sm"
-                    src="assets/logo.jpeg" 
+                    src="assets/logo.png"
                     alt="akhil" />
             </div>
             <div class="mt-10 font-mono text-xs mx-16 leading-loose">
