--- a/index.html
+++ b/index.html
@@ -4,19 +4,42 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="min-h-screen flex items-center justify-center">
-        <div class="text-center sm:mt-0 mt-[-10vh]">
-            <div class="flex items-center justify-center">
-                <img 
-                    class="rounded-full border p-5 h-28 shadow-sm"
-                    src="assets/logo.png"
-                    alt="akhil" />
+    <body class="items-center justify-center">
+
+        <!-- content -->
+        <div class="max-w-[900px] mx-auto px-2 h-full">
+
+            <!-- header and nav -->
+            <div class="flex justify-between border-b mb-5">
+                <header class="font-serif text-4xl py-3 text-gray-700">
+                    Akhil Maskeri
+                </header>
+                <div class="my-auto flex px-5">
+                    <div class="px-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
+                    </div>
+                    <div class="px-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-rss"><path d="M4 11a9 9 0 0 1 9 9"/><path d="M4 4a16 16 0 0 1 16 16"/><circle cx="5" cy="19" r="1"/></svg>
+                    </div>
+                </div>
             </div>
-            <div class="mt-10 font-mono text-xs mx-16 leading-loose">
-                <p>
-                    Hello All! I'm Akhil, currently working at VMware as an SRE. <br/>
-                    Feel free to reach me at <span class="text-blue-600">akhil.maskeri@gmail.com</span>
-                </p>
+            
+            <!-- content -->
+            <div>
+                <div class="grid grid-cols-10 gap-5 py-2">
+
+                    <div class="text-center px-5 col-span-2">
+                        <div class="border h-32">
+                            <div class="text-2xl">6</div>
+                            <div class="text-xs">August</div>
+                        </div>
+                    </div>
+                    <div class="px-2 col-span-8 pt-5">
+                        <div class="capitalize">post 2</div>
+                        <div class="text-gray-600 text-sm">description</div>
+                    </div>
+                </div>
+            
             </div>
         </div>
     </body>
