--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="min-h-screen flex items-center justify-center">
+    <body class="min-h-screen flex items-center justify-center comic-neue-regular">
         <div class="text-center sm:mt-0 mt-[-10vh]">
+
             <div class="flex items-center justify-center">
                 <img 
                     class="rounded-full border p-5 h-28 shadow-sm"
@@ -18,6 +19,24 @@
                     Feel free to reach me at <span class="text-blue-600">akhil.maskeri@gmail.com</span>
                 </p>
             </div>
+
+            <div class="flex justify-center lowercase text-xs py-5">
+                <div class="px-5">
+                    <span class="font-bold">[</span>
+                    <span class="hover:text-blue-600">
+                        <a target="_blank" href="https://github.com/akhilmaskeri">Github</a>
+                    </span>
+                    <span class="font-bold">]</span>
+                </div>
+                <div class="px-5">
+                    <span class="font-bold">[</span>
+                    <span class="hover:text-blue-600">
+                        <a target="_blank" href="https://www.linkedin.com/in/akhilmaskeri/">LinkedIn</a>
+                    </span>
+                    <span class="font-bold">]</span>
+                </div>
+            </div>
+
         </div>
     </body>
 </html>
