--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="mt-10 font-mono text-xs mx-16 leading-loose">
                 <p>
-                    Hello All! I'm Akhil, currently working at VMware as an SRE. <br/>
+                    Hello All! I'm Akhil, I am an SRE currently open for opportunities.<br/>
                     Feel free to reach me at <span class="text-blue-600">akhil.maskeri@gmail.com</span>
                 </p>
             </div>
@@ -23,14 +23,14 @@
             <div class="flex justify-center lowercase text-xs py-5">
                 <div class="px-5">
                     <span class="font-bold">[</span>
-                    <span class="hover:text-blue-600">
+                    <span class="hover:text-blue-600 font-mono">
                         <a target="_blank" href="https://github.com/akhilmaskeri">Github</a>
                     </span>
                     <span class="font-bold">]</span>
                 </div>
                 <div class="px-5">
                     <span class="font-bold">[</span>
-                    <span class="hover:text-blue-600">
+                    <span class="hover:text-blue-600 font-mono">
                         <a target="_blank" href="https://www.linkedin.com/in/akhilmaskeri/">LinkedIn</a>
                     </span>
                     <span class="font-bold">]</span>
