new life update

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             </div>
             <div class="mt-10 font-mono text-xs mx-16 leading-loose">
                 <p>
-                    Hello All! I'm Akhil, I am an SRE currently open for opportunities.<br/>
+                    Hello All! I'm Akhil, I am a DevOps Engineer at
+                    <a class="text-gray-600 font-bold" href="https://growthsphere.ai/">growthsphere.ai<a/><br/>
                     Feel free to reach me at <span class="text-blue-600">akhil.maskeri@gmail.com</span>
                 </p>
             </div>
